Updating multiple pages

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -41,6 +41,11 @@
 	<p>
 		<a href="./rest/role?auth_token=asdfasfdasdf&user_id=staff">Get staff role</a> <br>
 		<a href="./rest/role?auth_token=HsBijcboKZpa5MaMHl7ZHLFPl5aBsJMY&user_id=client">Get client role</a>
+		<a href="./rest/role/all?auth_token=asdfasfdasdf&user_id=staff">Get Roles</a>
+		<a href="./rest/user/staff/asdfasdfasdf">Create User</a>
+		
+
+
 	</p>
 	
 	<p>
