fixed existing plan details bugs

--- a/WebContent/stevetest.html
+++ b/WebContent/stevetest.html
@@ -36,6 +36,8 @@
 	<p><a href="./rest/personalplan/educationemployment/client/HsBijcboKZpa5MaMHl7ZHLFPl5aBsJMY/pewpew">fetch employment/education</a></p>
 	<br>
 	<p><a href="./rest/role?auth_token=HsBijcboKZpa5MaMHl7ZHLFPl5aBsJMY&user_id=client">get role</a></p>
+	<br>
+	<p><a href=./rest/personalplan/allclientswithplans/{username}/{token}
 	<!-- -->
 	
 	<p>
@@ -56,6 +58,7 @@
 		<a href="./rest/personalplan/healthdetails/staff/asdfasfdasdf/coolbeans">Get 'coolbeans' healthdetails as 'staff'</a> <br>
 		<a href="./rest/personalplan/clientdetails/staff/asdfasfdasdf/coolbeans">Get 'coolbeans' clientdetails as 'staff'</a> <br>
 		<a href="./rest/personalplan/educationemployment/staff/asdfasfdasdf/coolbeans">Get 'coolbeans' educationemployment as 'staff'</a> <br>
+		<a href="./rest/personalplan/allclientswithplans/staff/asdfasfdasdf">Get current personal plans as 'staff'</a> <br>
 	</p>
 	
 	
@@ -97,7 +100,7 @@
 		}); /**/
 		
 		
-		
+		/*
 		var education = new Object();
 		education.address="1000 metres across bridge";
 		education.communityAssistance="Quicksilver Sloths";
