--- a/WebContent/personalplan/education.html
+++ b/WebContent/personalplan/education.html
@@ -1,6 +1,6 @@
-	<button id='PageNavPrev' name='PageNavPrev' >Previous</button>	
-	<button id='PageNavNext' name='PageNavNext' >Next</button>
-	<button id='PageNavSubmitB' name='PageNavSubmitB'>Submit</button>
+	<button id='PageNavPrevEdu' class='prevButton' >Previous</button>	
+	<button id='PageNavNextEdu' class='nextButton'  >Next</button>
+	<button id='PageNavSubmitBEdu' class='submitButtonas' >Submit</button>
 	<div id='testing'></div>
 	
 	<div id='educationD'>
@@ -128,65 +128,23 @@
 	</div>
 
 <script type='text/javascript'>
-	var pageDivNav = new Array("educationD", "employmentD");
-
-	function PageNavigation(dir) {
-		for(var i=0; i<pageDivNav.length; i++) {
-			if($("#" + pageDivNav[i]).css('display') != 'none') {
-				//perform page navigation
-				if(dir=="next") {
-					$("#PageNavPrev").show();
-					$("#" + pageDivNav[i+1]).show();
-					//show the submit button and hide next button if we are on the last page
-					if(i+1==pageDivNav.length-1) {
-						$("#PageNavNext").hide();
-						$("#PageNavSubmitB").show();
-					}
-				}else if(dir=='prev') {
-					$("#PageNavNext").show();
-					$("#PageNavSubmitB").hide();
-					$("#" + pageDivNav[i-1]).show();
-					//hide the previous button if we are on the first page
-					if(i-1==0) {
-						$("#PageNavPrev").hide();
-					}
-				}
-				//hide the current div
-				$("#" + pageDivNav[i]).hide();
-				break;
-			}
-		}
-	};
-
-
-	function Duplicate(divName) {
-		$("#"+divName).append($("#" + divName + "Template").children().clone());
-	};
-		
+	var eduPageDivNav = new Array("educationD", "employmentD");
 
 	$(document).ready(function() {
 		//page load
 		//hide necessary elements
-//MAKE THIS INTO A FUNCTION BECAUSE YOU DO IT ON EVERY PAGE AND HAVE AN ARRAY OF THE PAGE NAV DIVS
-		$("#PageNavSubmitB").hide();
-		$("#PageNavPrev").hide();
 		$("#employmentD").hide();
 		
 
 
 		//click on the previous button
 		$("#PageNavPrev").click(function(){
-			PageNavigation('prev');
+			PageNavigation('prev', eduPageDivNav);
 		});
 
 		//click on the next button
 		$("#PageNavNext").click(function(){
-			PageNavigation('next');
-		});
-
-		//click on toggle class element
-		$(".toggle").click(function(event){
-			$(this).next().toggle();
+			PageNavigation('next', eduPageDivNav);
 		});
 		
 		//click on the submit button
