--- a/WebContent/personalplan/health.html
+++ b/WebContent/personalplan/health.html
@@ -1,6 +1,6 @@
-	<button id='PageNavPrev' name='PageNavPrev' >Previous</button>	
-	<button id='PageNavNext' name='PageNavNext' >Next</button>
-	<button id='PageNavSubmitB' name='PageNavSubmitB'>Submit</button>
+	<button id='PageNavPrevHealth' class='prevButton' >Previous</button>	
+	<button id='PageNavNextHealth' class='nextButton' >Next</button>
+	<button id='PageNavSubmitBHealth' class='submitButton'>Submit</button>
 	<div id='testing'></div>
 	
 	<div id='healthD'>
@@ -195,42 +195,11 @@ DROPDOWN HERE + INLINE FORMATTING
 	</div>
 
 <script type='text/javascript'>
-	var pageDivNav = new Array("healthD", "hManagementD", "dietD");
-
-	function PageNavigation(dir) {
-		for(var i=0; i<pageDivNav.length; i++) {
-			if($("#" + pageDivNav[i]).css('display') != 'none') {
-				//perform page navigation
-				if(dir=="next") {
-					$("#PageNavPrev").show();
-					$("#" + pageDivNav[i+1]).show();
-					//show the submit button and hide next button if we are on the last page
-					if(i+1==pageDivNav.length-1) {
-						$("#PageNavNext").hide();
-						$("#PageNavSubmitB").show();
-					}
-				}else if(dir=='prev') {
-					$("#PageNavNext").show();
-					$("#PageNavSubmitB").hide();
-					$("#" + pageDivNav[i-1]).show();
-					//hide the previous button if we are on the first page
-					if(i-1==0) {
-						$("#PageNavPrev").hide();
-					}
-				}
-				//hide the current div
-				$("#" + pageDivNav[i]).hide();
-				break;
-			}
-		}
-	};
-
+	var healthPageDivNav = new Array("healthD", "hManagementD", "dietD");
 
 	$(document).ready(function() {
 		//page load
 		//hide necessary elements
-		$("#PageNavSubmitB").hide();
-		$("#PageNavPrev").hide();
 		$("#hManagementD").hide();
 		$("#dietD").hide();
 
@@ -241,23 +210,18 @@ DROPDOWN HERE + INLINE FORMATTING
 		});
 		
 		//click on the previous button
-		$("#PageNavPrev").click(function(){
-			PageNavigation('prev');
+		$("#PageNavPrevHealth").click(function(){
+			PageNavigation('prev', healthPageDivNav);
 		});
 
 		//click on the next button
-		$("#PageNavNext").click(function(){
-			PageNavigation('next');
-		});
-
-		//click on toggle class element
-		$(".toggle").click(function(event){
-			$(this).next().toggle();
+		$("#PageNavNextHealth").click(function(){
+			PageNavigation('next', healthPageDivNav);
 		});
 		
 		
 		//click on the submit button
-		$("#PageNavSubmitB").click(function(){
+		$("#PageNavSubmitBHealth").click(function(){
 			
 			var dietaryRequirements = new Object();
 			if($('#safeEatingCy').prop('checked')) {
