--- a/WebContent/personalplan/planning.html
+++ b/WebContent/personalplan/planning.html
@@ -1,7 +1,7 @@
 <body>
-	<button id='PageNavPrev' name='PageNavPrev' >Previous</button>	
-	<button id='PageNavNext' name='PageNavNext' >Next</button>
-	<button id='PageNavSubmitB' name='PageNavSubmitB'>Submit</button>
+	<button id='PageNavPrevPlan' class='prevButton' >Previous</button>	
+	<button id='PageNavNextPlan' class='nextButton' >Next</button>
+	<button id='PageNavSubmitBPlan' class='submitButton' >Submit</button>
 
 	<div id='holidayD'>
 		<label for='holidayT' class='toggle'>Holiday (Where I want to go/what I want to do): </label>
@@ -86,36 +86,8 @@
 
 
 <script type='text/javascript'>
-	var pageDivNav = new Array("holidayD", "goalsDiv");
+	var planPageDivNav = new Array("holidayD", "goalsDiv");
 	var i=0;
-
-	function PageNavigation(dir) {
-		for(var i=0; i<pageDivNav.length; i++) {
-			if($("#" + pageDivNav[i]).css('display') != 'none') {
-				//perform page navigation
-				if(dir=="next") {
-					$("#PageNavPrev").show();
-					$("#" + pageDivNav[i+1]).show();
-					//show the submit button and hide next button if we are on the last page
-					if(i+1==pageDivNav.length-1) {
-						$("#PageNavNext").hide();
-						$("#PageNavSubmitB").show();
-					}
-				}else if(dir=='prev') {
-					$("#PageNavNext").show();
-					$("#PageNavSubmitB").hide();
-					$("#" + pageDivNav[i-1]).show();
-					//hide the previous button if we are on the first page
-					if(i-1==0) {
-						$("#PageNavPrev").hide();
-					}
-				}
-				//hide the current div
-				$("#" + pageDivNav[i]).hide();
-				break;
-			}
-		}
-	};
 
 	function Duplicate(divName) {
 		//$("#"+divName).append($("#" + divName + "Template").children().clone());
@@ -129,25 +101,18 @@
 
 	$(document).ready(function() {
 		//page load
-		alert('testing');
-		$("#PageNavSubmitB").hide();
-		$("#PageNavPrev").hide();
 		$("#goalsDiv").hide();
 
 		//click on the previous button
 		$("#PageNavPrev").click(function(){
-			PageNavigation('prev');
+			PageNavigation('prev', planPageDivNav);
 		});
 
 		//click on the next button
 		$("#PageNavNext").click(function(){
-			PageNavigation('next');
+			PageNavigation('next', planPageDivNav);
 		});
 
-		//click on toggle class element
-		$(".toggle").click(function(event){
-			$(this).next().toggle();
-		});
 
 		//click on the submit button
 		$("#PageNavSubmitB").click(function(){
