--- a/WebContent/personalplan/communication.html
+++ b/WebContent/personalplan/communication.html
@@ -45,34 +45,12 @@
 
 <script type='text/javascript'>
 	$(document).ready(function() {
-		//page load
-		$.ajax({
-			url: "./rest/personalplan/communication/" + $.cookie('user_id') + "/" + $.cookie('auth_token') + "/" + $.cookie('client_id'),
-			type:"get",
-			contentType: "application/json",
-			success: function(d) {		
-				$("#ICommunicateT").val(d.comsAndDecisionMaking.iCommunicate)
-				$("#youCommunicateT").val(d.comsAndDecisionMaking.youCommunicate)
-				$("#supportPeopleT").val(d.comsAndDecisionMaking.supportPeople)
-				$("#supportMeByT").val(d.comsAndDecisionMaking.supportMeBy)
-				$("#independantDecisionsT").val(d.comsAndDecisionMaking.independantDecisions)
-				$("#goodTopicsT").val(d.comsAndDecisionMaking.goodTopics)
-				$("#likesT").val(d.comsAndDecisionMaking.likes)
-				$("#dislikesT").val(d.comsAndDecisionMaking.dislikes)
-			},
-			error: function(xhr) {
-				// do something to handle error
-				alert("error");
-			}
-		});
-		
-		
 		//click on the submit button
 		$("#PageNavSubmitBComm").click(function(){
 			var comsAndDecisionMaking = new Object();
 			comsAndDecisionMaking.dislikes = $("#dislikesT").val();
 			comsAndDecisionMaking.goodTopics = $("#goodTopicsT").val();
-			comsAndDecisionMaking.ICommunicate = $("#ICommunicateT").val();
+			comsAndDecisionMaking.iCommunicate = $("#ICommunicateT").val();
 			comsAndDecisionMaking.independantDecisions = $("#independantDecisionsT").val();
 			comsAndDecisionMaking.likes = $("#likesT").val();
 			comsAndDecisionMaking.supportMeBy = $("#supportMeByT").val();
